1. Collection API Улучшения [#267696]