@@ -11,7 +11,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissed() {
         List<String> input = Arrays.asList("k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -19,7 +19,7 @@ public class DepartmentsTest {
     @Test
     public void whenNonChange() {
         List<String> input = Arrays.asList("k1", "k1/sk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1");
+        List<String> expect = List.of("k1", "k1/sk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -27,7 +27,7 @@ public class DepartmentsTest {
     @Test
     public void whenMissedK2() {
         List<String> input = Arrays.asList("k1/sk1", "k2", "k2/sk1/ssk1");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
+        List<String> expect = List.of("k1", "k1/sk1", "k2", "k2/sk1", "k2/sk1/ssk1");
         List<String> result = Departments.fillGaps(input);
         assertThat(result, is(expect));
     }
@@ -54,7 +54,7 @@ public class DepartmentsTest {
     public void sortAscTest() {
         List<String> input = Arrays.asList("k2/sk1/ssk1", "k1/sk1/ssk2", "k2/sk1", "k1/sk1/ssk1", "k1/sk1",
                 "k2/sk1/ssk2", "k1/sk2", "k1", "k2");
-        List<String> expect = Arrays.asList("k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2",
+        List<String> expect = List.of("k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2",
                 "k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2");
         Departments.sortAsc(input);
         assertThat(input, is(expect));
@@ -64,7 +64,7 @@ public class DepartmentsTest {
     public void sortDescTest() {
         List<String> input = Arrays.asList("k2/sk1/ssk1", "k1/sk1/ssk2", "k2/sk1", "k1/sk1/ssk1", "k1/sk1",
                 "k2/sk1/ssk2", "k1/sk2", "k1", "k2");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2",
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2",
                 "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2", "k1/sk2");
         Departments.sortDesc(input);
         assertThat(input, is(expect));
@@ -74,7 +74,7 @@ public class DepartmentsTest {
     public void sortDescFullCycle() {
         List<String> input = Arrays.asList("k2/sk1/ssk1", "k1/sk1/ssk2",  "k1/sk1/ssk1",
                 "k2/sk1/ssk2");
-        List<String> expect = Arrays.asList("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2",
+        List<String> expect = List.of("k2", "k2/sk1", "k2/sk1/ssk1", "k2/sk1/ssk2",
                 "k1", "k1/sk1", "k1/sk1/ssk1", "k1/sk1/ssk2");
         List<String> allDeps = Departments.fillGaps(input);
         Departments.sortDesc(allDeps);
